# corridorkey_ofx

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.bat  uninstall.bat
backend/: inference_wrapper.py  install.py  ipc_protocol.py  pyproject.toml  server.py
installer/: config.json  install_windows.bat
plugin/: CMakeLists.txt
plugin/src/: CorridorKeyPlugin.cpp  CorridorKeyPlugin.h  CorridorKeyProcessor.cpp  CorridorKeyProcessor.h  IPCClient.cpp  IPCClient.h  PluginRegistration.cpp
scripts/: build_plugin.bat  dev_setup.bat  start_backend.bat
